# financial-ml-governance

./: .gitignore  README.md  pyproject.toml
src/fm_gov/: config.py  logging.py
src/fm_gov/data/: synthetic.py
src/fm_gov/pipelines/: train_register.py  validate_model.py
src/fm_gov/reporting/: model_card.py
src/fm_gov/validation/: risk.py  stress.py
