[project]
name = "financial-ml-governance"
version = "0.2.0"
description = "Production-style financial ML model governance, validation, stress testing, and monitoring system."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
